
v2.0

 - Ported to GTK4

v1.7

 - Added image preview to file chooser (thanks @Sierra410)
 - Added rectangle position adjustment using arrow keys
 - Restored grayscale filter option

v1.6

 - Improved small crop region selection

v1.5

 - Added setting for "quick export" to Pictures or Overwrite
 - Moved "add thumbnail" setting to new preferences dialog
 - Removed grayscale filter

v1.4

 - Added multiple preview functionality
 - Added keyboard shortcut to enable free rectangle mode (Ctrl)
 - Moved circle preview toggle to context menu
 - Moved slow drag key from Ctrl to Shift
 - Improved rotation
   - Thumbnail now updates when dragging
   - Fixed slider direction
   - Restricted to 180 degree range

v1.3

 - Added "Discard EXIF" option
 - Added crop toggle to header bar
 - Fixed export dimension indicator when crop disabled

v1.2

 - Added new app icon
 - Added custom downscale entry
 - Fixed click preview to switch to circle not working on first click
 - Fixed and changed 1500 downscale value to 1920

v1.1

 - Tweaked selection rectangle to not slide when resizing past border
 - Fixed preview not refreshing on image load
 - Fixed unnecessary redrawing on mouse motion
